# modern-finance-dashboard

./: .gitignore  README.md  pyproject.toml
src/: app.py
src/entity/: account_entity.py  pot_entity.py
src/pages/: analysis.py  dashboard.py  settings.py
src/plots/: basic.py
src/utils/: kalman.py
